--- a/template/index.html
+++ b/template/index.html
@@ -40,19 +40,17 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        Clarence
-                        <span class="text-primary">Taylor</span>
+                        山田 美優 
+                        <!--小さくローマ字で -->
+                        <span class="text-primary">Miyu Yamada</span>
                     </h1>
                     <div class="subheading mb-5">
-                        3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-                        <a href="mailto:name@email.com">name@email.com</a>
+                        yamada.m.ba[at]m.titech.ac.jp
                     </div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <p class="lead mb-5">東京工業大学 荒瀬研究室 B4 <br>Hallucination検出の研究をしています。</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
+                        <a class="social-icon" href="https://github.com/miyu-y"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://x.com/MiyuYamada0514"><i class="fab fa-twitter"></i></a>
                     </div>
                 </div>
             </section>
