--- a/template/index.html
+++ b/template/index.html
@@ -39,7 +39,7 @@
             <!-- About-->
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
-                    <h1 class="mb-1">
+                    <h1 class="mb-0" style="font-size: 1rem;">
                         山田 美優 
                         <span class="text-primary">Miyu Yamada</span>
                     </h1>
