--- a/template/index.html
+++ b/template/index.html
@@ -40,13 +40,10 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0" style="font-size: 1rem;">
-                        山田 美優 
+                        山田 美優 a
                         <span class="text-primary">Miyu Yamada</span>
                     </h1>
-                    <div class="subheading mb-5">
-                        yamada.m.ba[at]m.titech.ac.jp
-                    </div>
-                    <p class="lead mb-5">東京工業大学 荒瀬研究室 B4 <br>Hallucination検出の研究をしています。</p>
+                    <p class="lead mb-5">東京工業大学 荒瀬研究室 B4 <br>Hallucination検出の研究をしています。<br>Mail: yamada.m.ba[at]m.titech.ac.jp</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://github.com/miyu-y"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://x.com/MiyuYamada0514"><i class="fab fa-twitter"></i></a>
