--- a/template/index.html
+++ b/template/index.html
@@ -58,9 +58,9 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">AI Enginner</h3>
-                            <div class="subheading mb-3">3keigo.com</div>
+                            <div class="subheading mb-3" href="https://3keigo.com" >3keigo.com</div>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Jan 2024 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">January 2024 - Present</span></div>
                     </div>
                 </div>
             </section>
@@ -71,20 +71,16 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Colorado Boulder</h3>
-                            <div class="subheading mb-3">Bachelor of Science</div>
-                            <div>Computer Science - Web Development Track</div>
-                            <p>GPA: 3.23</p>
+                            <h3 class="mb-0">東京工業大学</h3>
+                            <div>情報理工学院 情報工学系</div>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">April 2021 - Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">James Buchanan High School</h3>
-                            <div class="subheading mb-3">Technology Magnet Program</div>
-                            <p>GPA: 3.56</p>
+                            <h3 class="mb-0">静岡県立三島北高等学校</h3>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">April 2018 - March 2021</span></div>
                     </div>
                 </div>
             </section>
