--- a/template/index.html
+++ b/template/index.html
@@ -96,7 +96,9 @@
             <section class="resume-section" id="activities">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Activities</h2>
-                    
+                    <ul>
+                        <li>YANS2024(大阪)でのポスター発表<br>RAGを用いたLLMによる偽情報検出手法の検討,山田 美優 (東工大), 荒瀬 由紀 (東工大)</li>
+                    </ul>    
                 </div>
             </section>
         </div>
