--- a/template/index.html
+++ b/template/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>山田 美優 - Miyu Yamada  a</title>
+        <title>山田 美優 - Miyu Yamada</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -39,7 +39,7 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0" style="font-size: 4rem;">
-                        山田 美優 
+                        山田 美優 aaa
                         <span class="text-primary">Miyu Yamada</span>
                     </h1>
                     <p class="lead mb-5"><br>東京工業大学 荒瀬研究室 B4 <br>Hallucination検出の研究をしています。<br>Mail: yamada.m.ba[at]m.titech.ac.jp</p>
