--- a/template/index.html
+++ b/template/index.html
@@ -88,7 +88,7 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p class="mb-0">LLMを用いた社会実装や業務効率化を行いたいです。その課題の一つであるHallucinationの検出/軽減/修正について特に興味があります。<br>(これは完全な趣味ですが)歴史文書をLLMに扱わせてみたいです。</p>
+                    <p class="mb-0">LLMを用いた社会実装や業務効率化を行いたいです。その課題の一つであるHallucinationの検出/軽減/修正について特に興味があります。<br>(これは趣味ですが)いつか歴史をLLMで読み解くこともしてみたいと思っています。</p>
                 </div>
             </section>
             <hr class="m-0" />
