--- a/template/index.html
+++ b/template/index.html
@@ -72,6 +72,9 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">東京工業大学</h3>
                             <div>情報理工学院 情報工学系</div>
+                            <div>
+                                <a href="https://arase-cl-lab.c.titech.ac.jp/ja/" target="_blank">荒瀬研究室</a>
+                            </div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">April 2021 - Present</span></div>
                     </div>
