--- a/template/index.html
+++ b/template/index.html
@@ -52,7 +52,7 @@
                         山田 美優
                         <span class="text-primary">Miyu Yamada</span>
                     </h1>
-                    <p class="lead mb-5"><br>東京工業大学 荒瀬研究室 B4 <br>自然言語処理をやっています。Hallucination検出の研究をしています。<br>Mail: yamada.m.ba[at]m.titech.ac.jp</p>
+                    <p class="lead mb-5"><br>東京工業大学(東京科学大学) 荒瀬研究室 B4 <br>自然言語処理をやっています。偽情報検出の研究をしています。<br>Mail: yamada.m.ba[at]m.titech.ac.jp or yamada.m.ee1b[at]m.isct.ac.jp</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://github.com/miyu-y"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://x.com/MiyuYamada0514"><i class="fab fa-twitter"></i></a>
@@ -80,7 +80,7 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">東京工業大学</h3>
+                            <h3 class="mb-0">東京工業大学(東京科学大学)</h3>
                             <div>情報理工学院 情報工学系</div>
                             <div>
                                 <a href="https://arase-cl-lab.c.titech.ac.jp/ja/" target="_blank">荒瀬研究室</a>
